specs/timw/buildit-jenkins-all-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buildit-jenkins 
---
apiVersion: v1
kind: Service
metadata:
  name: buildit-jenkins
  namespace: buildit-jenkins
spec:
  ports:
  - name: ui
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: jnlp
    protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildit-jenkins
  namespace: buildit-jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - image: builditdigital/jenkins-image:2.6.0-alpine
        name: jenkins
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: buildit-encryptor
  namespace: buildit-jenkins
spec:
  ports:
  - name: ui
    protocol: TCP
    port: 80
    targetPort: 4567
  selector:
    app: encryptor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildit-encryptor
  namespace: buildit-jenkins
spec:
  selector:
    matchLabels:
      app: encryptor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: encryptor
    spec:
      containers:
      - image: builditdigital/encryptor-api:2.4.0
        name: encryptor
        ports:
        - containerPort: 4567
          name: http
---
# Follow this to install nginx ingress controller: https://github.com/nginxinc/kubernetes-ingress/blob/master/docs/installation.md
# For bare-metal I would recommend a daemon-set, which will run nginx on all nodes and expose ports 80/443 on them
# For cloud you can use a service of type 'LoadBalancer'
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buildit-jenkins-ingress
  namespace: buildit-jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  # Your DNS has to be able to resolve this hostname
  - host: buildit-jenkins.portworx.zone
    http:
      paths:
      - backend: 
          serviceName: buildit-jenkins
          servicePort: 80
  - host: buildit-encryptor.portworx.zone
    http:
      paths:
      - backend: 
          serviceName: buildit-encryptor
          servicePort: 80
