specs/timw/buildit-jenkins-ingress-aks.yaml
---
# Follow this to install nginx ingress controller: https://github.com/nginxinc/kubernetes-ingress/blob/master/docs/installation.md
# For bare-metal I would recommend a daemon-set, which will run nginx on all nodes and expose ports 80/443 on them (or use nginx-ingress-daemonset.yaml)
# For cloud you can use a service of type 'LoadBalancer'
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buildit-jenkins-ingress
  namespace: buildit-jenkins
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  # Your DNS has to be able to resolve this hostname
  - host: buildit-jenkins.5b6e485d-943c-4deb-ad40-7b171f9f7a0f.uksouth.aksapp.io
    http:
      paths:
      - backend: 
          serviceName: buildit-jenkins
          servicePort: 80
        path: /
